--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "sskhandek <sskhandek@gmail.com>"
   ],
   "dependencies": {
+    "JSON": "^1.0.0",
     "body-parser": "^1.12.0",
     "express": "^4.12.2",
-    "mongoose": "*"
+    "mongoose": "*",
+    "underscore": "^1.8.3"
   }
 }
